--- a/xo-console-app/pom.xml
+++ b/xo-console-app/pom.xml
@@ -8,7 +8,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>xo-console-app</artifactId>
-    <packaging>takari-jar</packaging>
+    <packaging>jar</packaging>
     <name>xo-console-app</name>
 
     <dependencies>
